--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                                 </div>
                                 <div class="contact-info-content">
                                     <h4 data-i18n="contacts.phoneTitle">Телефон</h4>
-                                    <p><a href="tel:+37255555555">+372 5555 5555</a></p>
+                                    <p><a href="tel:+372 5875 7178">+372 5875 7178</a></p>
                                 </div>
                             </div>
                             
@@ -830,7 +830,7 @@
                                 </div>
                                 <div class="contact-info-content">
                                     <h4 data-i18n="contacts.emailTitle">Email</h4>
-                                    <p><a href="mailto:info@repair-master.ee">info@repair-master.ee</a></p>
+                                    <p><a href="vladtitov85@mail.ru">vladtitov85@mail.ru</a></p>
                                 </div>
                             </div>
                             
